# article-service

./: .gitignore  Cargo.toml  README.md  app-config.toml
.postman/: api  api_f9376c52-d054-439f-b1bf-6e3d6856f298
api/schemas/: index.yaml
api/schemas/path/: find.yaml  insert.yaml  list.yaml
api/schemas/responses/: _index.yaml  internal.yaml  notfound.yaml  ok.yaml  unexpected.yaml
api/schemas/schemas/: _index.yaml  article.yaml  error.yaml  response.yaml
src/: article.rs  configurations.rs  main.rs  response.rs  service.rs
src/article/: mod.rs
src/article/repository/: mod.rs
src/article/service/: mod.rs
src/request/: mod.rs
src/response/: accept.rs  error.rs  mod.rs
